hphp/hack/test/typecheck/array/disallow_zero_type_parameters_for_darray.php.exp
File "disallow_zero_type_parameters_for_darray.php", line 3, characters 18-23:
Wrong number of type arguments (expected 2, got 0) (Typing[4101])
  File "hackarray.hhi", line 32, characters 24-27:
  Definition is here
