hphp/hack/test/typecheck/array/disallow_zero_type_parameters_for_darray.php
<?hh // strict

function test(): darray {
  return darray[];
}
